// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchSuggestion component should render SearchResult 1`] = `
<RCTScrollView
  keyboardShouldPersistTaps="always"
>
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 60,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-SemiBold",
                  "fontSize": 17,
                },
                Object {},
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            Recent searches
          </Text>
        </View>
        <ActivityIndicator
          color="#A4A9B7"
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
            }
          }
          testID="loading_indicator"
        />
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "height": 0,
          "width": "100%",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`SearchSuggestion component should render button search keyword 1`] = `
<RCTScrollView
  keyboardShouldPersistTaps="always"
>
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 15,
              },
              Object {},
              Object {
                "color": "#007AFF",
                "flex": 1,
              },
            ]
          }
        >
          See result for "hello"
        </Text>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "height": 0,
          "width": "100%",
        }
      }
    />
  </View>
</RCTScrollView>
`;
